@@ -4,7 +4,14 @@
 2. Match Gtk2 button size better.
 3. Fix gradient menus when not using lighter popup menu backgrounds.
 4. Slightly better looking listview lines.
-
+5. Use QMetaObject::invokeMethod/Qt::QueuedConnection instead of QTimer to
+   initialise KDE4 settings. Thanks to Eike Hein for the idea.
+6. When exporting KDE4 palette to KDE3, call kde-config to ascertain KDE3's
+   config dir.
+7. Export activeBackground, activeForeground, inactiveBackground, and
+   inactiveForeground of window manager colours  (if KDE4 home != KDE3 home)
+8. Export KDE4 fonts to KDE3 (if KDE4 home != KDE3 home)
+   
 0.65.0
 ------
  1. Add options to draw editable combos, and spin widgets, as edit fields with
